--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -67,7 +67,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=org.aas.vector.main
+main.class=DemoProgram
 # Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
 manifest.custom.codebase=
 # Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
